# lp-0005-balance-attestation

./: Cargo.toml  README.md  demo-offchain.sh  demo.sh  idl.json
.github/workflows/: ci.yml
basecamp-app/: README.md  index.html  module.json
circuit/guest/: Cargo.toml
circuit/guest/.cargo/: config.toml
circuit/guest/src/: main.rs
circuit/host/: Cargo.toml  build.rs
circuit/host/src/: main.rs  methods.rs  prover.rs
messaging/: Cargo.toml
messaging/src/: main.rs
programs/balance_attestation/: Cargo.toml
programs/balance_attestation/.cargo/: config.toml
programs/balance_attestation/src/: lib.rs  main.rs
programs/balance_attestation/tests/: integration.rs
scripts/: package_r0bf.py
sdk/: Cargo.toml
sdk/src/: lib.rs
verifier-lib/: Cargo.toml
verifier-lib/src/: lib.rs
