[package]
name = "balance-attestation-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "balance-attestation-guest"
path = "src/main.rs"
test = false

[dependencies]
risc0-zkvm = { version = "3.0.5", default-features = false, features = ["std"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
