[package]
name = "balance-attestation-program"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { version = "1", features = ["derive"] }
nssa-core = { git = "https://github.com/logos-co/lez-build.git" }
spel-framework = { git = "https://github.com/logos-co/spel.git" }
risc0-zkvm = { version = "1", features = ["std"] }
ed25519-dalek = "2"
serde = { version = "1", features = ["derive"] }
